--- a/client/src/app.css
+++ b/client/src/app.css
@@ -1,3 +1,30 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .dashboard-header {
+        @apply sticky top-0 inset-x-0 flex flex-wrap sm:justify-start sm:flex-nowrap z-[48] w-full bg-white border-b text-sm py-2.5 sm:py-4 lg:pl-64 dark:bg-gray-800 dark:border-gray-700
+    }
+
+    .dashboard-nav {
+        @apply flex basis-full items-center w-full mx-auto px-4 sm:px-6 md:px-8
+    }
+
+    .dashboard-nav__brand {
+        @apply mr-5 lg:mr-0 lg:hidden
+    }
+
+    .dashboard-nav__brand a {
+        @apply flex-none text-xl font-semibold dark:text-white
+    }
+
+    .dashboard-nav__content {
+        @apply w-full flex items-center justify-end ml-auto sm:justify-between sm:gap-x-3 sm:order-3
+    }
+
+    .dashboard-sidebar-toggle {
+        @apply sticky top-0 inset-x-0 z-20 bg-white border-y px-4 sm:px-6 md:px-8 lg:hidden dark:bg-gray-800 dark:border-gray-700
+    }
+
+}
