--- a/client/src/app.css
+++ b/client/src/app.css
@@ -14,4 +14,12 @@
     /* .drawer-side li a{
         @apply hover:bg-gray-950 hover:text-white
     } */
+
+    .btn.btn-blue {
+        @apply bg-blue-500 hover:bg-blue-600 text-white
+    }
+
+    .btn.btn-red {
+        @apply bg-red-500 hover:bg-red-600 text-white
+    }
 }
