--- a/client/src/app.css
+++ b/client/src/app.css
@@ -16,10 +16,10 @@
     } */
 
     .btn.btn-blue {
-        @apply bg-blue-500 hover:bg-blue-600 text-white
+        @apply bg-blue-500 hover:bg-blue-600 text-white disabled:bg-blue-900
     }
 
     .btn.btn-red {
-        @apply bg-red-500 hover:bg-red-600 text-white
+        @apply bg-red-500 hover:bg-red-600 text-white disabled:bg-red-900
     }
 }
