Update import data, (bug fixed)

--- a/client/src/app.css
+++ b/client/src/app.css
@@ -22,4 +22,8 @@
     .btn.btn-red {
         @apply bg-red-500 hover:bg-red-600 text-white
     }
+
+    .btn.btn-green {
+        @apply bg-green-500 hover:bg-green-600 text-white
+    }
 }
